[package]
name = "taiko"
description = "A composable web server"
version = "0.1.2"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/netrune-company/taiko"
homepage = "https://github.com/netrune-company/taiko"

[dependencies]
hyper = { version = "1.6.0" }
hyper-util = { version = "0.1.14", features = ["full"] }
tokio = { version = "1.46.1", features = ["full"] }
http = { version = "1.3.1" }
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141" }
matchit = { version = "0.8.6" }