[package]
name = "taiko"
description = "A composable web server"
version = "0.1.35"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/netrune-company/taiko"
homepage = "https://github.com/netrune-company/taiko"

[dependencies]
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.16", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
http = { version = "1.3.1" }
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
serde_urlencoded = { version = "0.7.1" }
matchit = { version = "0.8.6" }
tracing-subscriber = "0.3.20"
tracing = { version = "0.1.41" }